src/objects/Metadata_Priority__c.object
<CustomObject>
    <description>US669
Admin can set up keywords to look for and the priority to set on the case with those keywords
When case is created with a keyword the priority is set appropriately
Cases without the keywords are set to Priority 5</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Priority</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>France</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>Germany</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NA_P1_Keywords</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada,United States of America</value>
        </filters>
        <label>NA P1 Keywords</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USA_P1</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United States of America</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>USA P1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X4</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X5</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X7</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>7</value>
        </filters>
        <label>7</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>argentina</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>,France,United Kingdom,Netherlands,Germany</value>
        </filters>
        <label>argentina</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Metadata Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Priority</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>